# kit-of-parts-simulation

./: .gitignore
src/kop_control/: CMakeLists.txt  package.xml
src/kop_control/config/: kop_control.yaml
src/kop_control/launch/: control.launch
src/kop_description/: CMakeLists.txt
src/kop_description/config/: physical_params.yaml
src/kop_description/launch/: gazebo.launch
src/kop_description/meshes/visual/: left_front.STL  left_middle.STL  left_rear.STL  right_front.STL  right_middle.STL  right_rear.STL  small_wheel.stl
src/kop_description/urdf/: gen  hokuyo.xacro  kop.xacro  long_kop.urdf  robot.xacro
src/kop_interface/: CMakeLists.txt
src/kop_interface/launch/: interface.launch
src/kop_interface/src/: main.cc  statepublisher.cc
src/kop_simulation/: CMakeLists.txt  package.xml
src/kop_simulation/launch/: simulation.launch
