<?xml version="1.0"?>
<package format="2">
  <name>kop_control</name>
  <version>1.0.0</version>
  <description>Defines control parameters for the kit of parts robot.</description>

  <maintainer email="aramis.tanelus@gmail.com">Aramis Tanelus</maintainer>


  <license>MIT</license>


  <url type="repository">https://github.com/Aramist</url>


  <author email="aramis.tanelus@gmail.com">Aramis Tanelus</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>efforT_controllers</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>efforT_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
